--- a/index.html
+++ b/index.html
@@ -62,8 +62,11 @@
         <div class="div2">
             
             <h2 class="headline">Follow Me</h2>
-            <iframe name="facebook" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FKenda-Tires-Israel-1437121509912597%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="370" height="300" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
-
+            <iframe name="facebook" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FNika-103512767971908&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="370" height="300" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+			
+  <br>
+  <div class="fblike" data-href="https://sise-web-development-environments.github.io/312464977/" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true" fb-xfbml-state="rendered" fb-iframe-plugin-query="action=like&amp;app_id=&amp;container_width=1247&amp;href=https%3A%2F%2Fsise-web-development-environments.github.io%2F312464977%2F&amp;layout=standard&amp;locale=en_US&amp;sdk=joey&amp;share=true&amp;show_faces=true&amp;size=small"><span style="vertical-align: bottom; width: 450px; height: 20px;"><iframe name="fc689d6909461c" width="1000px" height="1000px" data-testid="fb:like Facebook Social Plugin" title="fb:like Facebook Social Plugin" frameborder="0" allowtransparency="true" allowfullscreen="true" scrolling="no" allow="encrypted-media" src="https://www.facebook.com/v6.0/plugins/like.php?action=like&amp;app_id=&amp;channel=https%3A%2F%2Fstaticxx.facebook.com%2Fconnect%2Fxd_arbiter.php%3Fversion%3D46%23cb%3Df1229327f26348%26domain%3Dsise-web-development-environments.github.io%26origin%3Dhttps%253A%252F%252Fsise-web-development-environments.github.io%252Ff39ceb137eab2b8%26relation%3Dparent.parent&amp;container_width=1247&amp;href=https%3A%2F%2Fsise-web-development-environments.github.io%2F312464977%2F&amp;layout=standard&amp;locale=en_US&amp;sdk=joey&amp;share=true&amp;show_faces=true&amp;size=small" style="border: none; visibility: visible; width: 450px; height: 20px;" class=""></iframe></span></div>
+  </section>
         </div>
     </section>         
     </div>
