--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <section id="playlist" class="section"></section>
                 <h1><b> Playlist</b></h1></section>
             
-	<iframe class="youtube" style="border: 8px solid #909293" width="760" height="515" 
+	<iframe class="youtube" style="border: 8px solid #E6AB79" width="760" height="515" 
 	src="https://www.youtube.com/embed/videoseries?list=PLtDp75hOzOlaQcPfx-Za_Dd1sOBPtdBw3&index=2" 
 	frameborder="0"  allow="autoplay; encrypted-media;" allowfullscreen ></iframe>            <br/>
             <br/>
