--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <h1><b> Playlist</b></h1></section>
             
 	<iframe class="youtube" style="border: 8px solid #E6AB79" width="760" height="515" 
-	src="https://www.youtube.com/embed/videoseries?list=RDGqMNUPx3MJM&start_radio=1&t=16" 
+	src="https://www.youtube.com/embed/videoseries?list=RDGqMNUPx3MJM&index=1" 
 	frameborder="0"  allow="autoplay; encrypted-media;" allowfullscreen ></iframe>            <br/>
             <br/>
             <br/>
