--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="style.css" />
-
+    <title>Nika's Website</title>
 </head>
-
 <body>
 
     <div class="main">
