--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img class="dogimg" src="dog.jpg">
         </nav>
     </div>
-
+<div>
     <div class="main">
 
 
@@ -241,6 +241,7 @@
 
         </div>
     </div>
+ </div>
 
 
 </body>
