--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             </ul>
             <img class="dogimg" src="dog.jpg">
         </nav>
-    </div>
+    
+
     <div class="main">
 
 
@@ -61,7 +62,7 @@
                 <section id="about" class="section">
                     <h1><b>About Me </b></h1>
 
-                    <h2 class="headline">Hey, I am Nika!</h2>
+                    <h2 class="headline">HEY, I am Nika!</h2>
                     <p class="left">
                         I'm 4 years old, I have 2 cute parents they live with me in my kingdom.</br>
                         My parents serve me and my mother also made me this website.
@@ -240,6 +241,7 @@
 
         </div>
     </div>
+</div>
 
 
 
