--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <section id="about" class="section">
                     <h1><b>About Me </b></h1>
 
-                    <h2 class="headline">HEY, I am Nika!</h2>
+                    <h2 class="headline">Hey, I am Nika!</h2>
                     <p class="left">
                         I'm 4 years old, I have 2 cute parents they live with me in my kingdom.</br>
                         My parents serve me and my mother also made me this website.
