--- a/index.html
+++ b/index.html
@@ -249,7 +249,8 @@
                     <img src="ester1.jpeg" width="35%">
                     <img src='ester2.jpeg'width="30%">
                     <br/>
-                    <video src="ester3.mp4" type="video/mp4" width="30%"controls> 
+                    <p>מצביעה בפעם הראשונה עם הנכדים</p>
+                    <video src="ester3.mp4" type="video/mp4" width="60%"controls> 
                  
                     </div>
                    
